NLP TP/texts/robotics/robotics.stackexchange_0000033091.txt
Q:

Problems with rosinstall on MAC OSX 10.5

Hello, When I try to install ros by following the wiki, I get this error :
$ rosinstall ~/ros "http://packages.ros.org/cgi-bin/gen_rosinstall.py?rosdistro=cturtle&variant=base&overlay=no"

/Library/Python/2.5/site-packages/rosinstall-0.5.16-py2.5.egg/rosinstall/vcs/svn.py:49: Warning: 'with' will become a reserved keyword in Python 2.6
Traceback (most recent call last):
  File "/usr/local/bin/rosinstall", line 5, in <module>
    pkg_resources.run_script('rosinstall==0.5.16', 'rosinstall')
  File "/System/Library/Frameworks/Python.framework/Versions/2.5/Extras/lib/python/pkg_resources.py", line 442, in run_script
    self.require(requires)[0].run_script(script_name, ns)
  File "/System/Library/Frameworks/Python.framework/Versions/2.5/Extras/lib/python/pkg_resources.py", line 1167, in run_script
    exec script_code in namespace, namespace
  File "/usr/local/bin/rosinstall", line 28, in <module>
    
  File "/Library/Python/2.5/site-packages/rosinstall-0.5.16-py2.5.egg/rosinstall/vcs/svn.py", line 49
    with open(os.devnull, 'w') as fnull:
            ^
SyntaxError: invalid syntax

I have python 2.5:
$ ls -l `which python`
lrwxr-xr-x  1 root  wheel  72 11 sep  2010 /usr/bin/python -> ../../System/Library/Frameworks/Python.framework/Versions/2.5/bin/python

I found the same problem happend on debian - link
How can I solve the problem?

Originally posted by gwilly on ROS Answers with karma: 1 on 2011-07-19
Post score: 0

A:

To get this to work on python 2.5 you need to add
from __future__ import with_statement

at the top of the rosinstall script.

Originally posted by tfoote with karma: 58457 on 2011-07-25
This answer was ACCEPTED on the original site
Post score: 1

